# socialInfluence3.0

./: README.md
paper/: influence.bib  manuscript.tex
py_analysis/: dsigma.py  escape_time.py  laplace-dA.py  optimal_sig.py  potential.py  transition.py  x1x2.py
report/: report.tex
simulations/escape_time/: CMakeLists.txt  main.cpp  switcherKernel.cu
simulations/escape_time/include/: main.h  params.h  plotGrid.h  switcherKernel.h
simulations/escape_time/visuals/: plotGrid.cpp
simulations/potential/: CMakeLists.txt  main.cpp  run.sl  switcherKernel.cu
simulations/potential/include/: main.h  switcherKernel.h
simulations/potential/visuals/: CMakeLists.txt
